--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -295,6 +295,28 @@ a {
     text-overflow: ellipsis;
 }
 
+.largeTitle {
+    width: 500px;
+}
+
+.largeTitleIn {
+    max-width: 400px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.smallTitle {
+    width: 240px;
+}
+
+.smallTitleIn {
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .showoffWriter {
     font-size: 13px;
     color: #919191;
