--- a/src/main/resources/templates/report/post-report.html
+++ b/src/main/resources/templates/report/post-report.html
@@ -43,12 +43,12 @@
             <!--신고 제목, 내용-->
             <div class="report-title">
                 <label for="reportTitle" class="form-label">신고 제목</label>
-                <input name="reportTitle" type="text" id="reportTitle" class="form-control">
+                <input name="reportTitle" type="text" id="reportTitle" class="form-control" placeholder="최대 50자까지 작성 가능합니다" maxlength="50">
             </div>
 
             <div class="report-content">
                 <label for="reportContent" class="form-label">신고 내용</label>
-                <textarea name="reportContent" id="reportContent" class="form-control" rows="6" style="resize: none"></textarea>
+                <textarea name="reportContent" id="reportContent" class="form-control" rows="6" style="resize: none" maxlength="255"></textarea>
             </div>
 
             <!--신고버튼-->
