--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -294,7 +294,7 @@
                                                      th:if="${dto.postTag eq '고양이'}"
                                                      alt="고양이태그">
                                             </span>
-                                        <div class="downList mt-2 ms-1">
+                                        <div class="mt-2 ms-1">
                                             <span th:text="${dto.postTitle}" class="mt-2">
                                                 게시물 제목
                                             </span>
@@ -372,7 +372,7 @@
                                                      alt="Image">
                                             </div>
                                             <div>
-                                                <div class="showOffTitle downShowTitle">
+                                                <div class="showOffTitle">
                                                     <span>
                                                         <img class="tag" src="/img/tag/tag_dog.png"
                                                              th:if="${dto.postTag eq '강아지'}"
