--- a/src/main/resources/templates/board/showoff.html
+++ b/src/main/resources/templates/board/showoff.html
@@ -85,7 +85,7 @@
                                                          th:if="${dto.postTag eq '고양이'}"
                                                          alt="고양이태그">
                                                 </span>
-                                                <span th:text="${dto.postTitle}" class="showoffTitleIn">
+                                                <span th:text="${dto.postTitle}">
                                                     게시물 제목
                                                 </span>
                                             </div>
