--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -84,7 +84,7 @@
                 <div class="postTitle">
                     <div class="form-group">
                         <input type="text" name="postTitle" class="form-control" th:value="${postDTO.postTitle}"
-                               aria-label="게시글제목">
+                               aria-label="게시글제목" maxlength="30">
                     </div>
                 </div> <!--제목입력-->
             </div> <!--제목/게시판/태그 선택-->
