--- a/src/main/resources/templates/board/modify_q.html
+++ b/src/main/resources/templates/board/modify_q.html
@@ -88,7 +88,7 @@
                 <!--글 제목 입력-->
                 <div class="postTitleQ">
                     <div class="form-group">
-                        <input type="text" name="postTitle" class="form-control" th:value="${postDTO.postTitle}" aria-label="게시글제목">
+                        <input type="text" name="postTitle" class="form-control" th:value="${postDTO.postTitle}" aria-label="게시글제목" maxlength="30">
                     </div>
                 </div> <!--글 제목 입력-->
             </div> <!--태그/답변자/비밀글/글 제목 입력-->
