--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -88,7 +88,7 @@
                 <div class="postTitle">
                     <div class="form-group">
                         <input type="text" name="postTitle" class="form-control" placeholder="글 제목을 작성해주세요."
-                               aria-label="게시글제목">
+                               aria-label="게시글제목" maxlength="30">
                     </div>
                 </div> <!--제목 입력-->
             </div> <!--제목/게시판/태그 선택-->
