--- a/src/main/resources/templates/board/register_q.html
+++ b/src/main/resources/templates/board/register_q.html
@@ -99,7 +99,7 @@
                 <!--글 제목 입력-->
                 <div class="postTitleQ">
                     <div class="form-group">
-                        <input type="text" name="postTitle" class="form-control" placeholder="글 제목을 작성해주세요.">
+                        <input type="text" name="postTitle" class="form-control" placeholder="글 제목을 작성해주세요." maxlength="30">
                     </div>
                 </div> <!--글 제목 입력-->
             </div> <!--태그/답변자/비밀글/글 제목 입력-->
