--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -87,7 +87,7 @@
                                                          th:if="${dto.postTag eq '고양이'}"
                                                          alt="고양이태그">
                                                 </span>
-                                                <span th:text="${dto.postTitle}" class="">
+                                                <span th:text="${dto.postTitle}" class="mt-1">
                                                     게시물 제목
                                                 </span>
                                                 <!--비밀글여부-->
