--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -103,10 +103,7 @@
                 </div>
             </div>
             <!--글내용-->
-            <div th:if="${postDTO.replyAuth==false} or ${postDTO.completeQna==true}"
-                 th:utext="${postDTO.postContent}" class="mx-4 postContent"></div>
-            <div th:if="${postDTO.replyAuth==true} and ${postDTO.completeQna==false} and (${username}==${postDTO.userId})"
-                 th:utext="${postDTO.postContent}" class="mx-4 postContentQ"></div>
+            <div th:utext="${postDTO.postContent}" class="mx-4 postContent"></div>
             <!--좋아요/싫어요/보관/신고 버튼-->
             <div class="mt-3 justify-content-center text-center">
                 <div class="d-flex justify-content-center">
