템플릿 수정

--- a/src/main/resources/templates/summernote/summernote.html
+++ b/src/main/resources/templates/summernote/summernote.html
@@ -198,7 +198,7 @@
                 cache: false,
                 success: function (response) {
 
-                    // console.log("이미지 삭제 성공:", response);
+                    console.log("이미지 삭제 성공:", response);
 
                     deletedImagesUuids.forEach(uuid => {
                         const index = imageUUIDs.indexOf(uuid);
